bugfix - Modify sortable table markup to match component
Signed-off-by: Johan Ronsse <wolf@wolfslittlestore.be>

--- a/invoices.html
+++ b/invoices.html
@@ -52,72 +52,21 @@ title: Invoices
   <div class="panel-body">
 
     <div class="table-responsive">
-      <table class="table table-striped table-condensed table-responsive m0">
+      
+      <table class="table table-condensed table-striped table-hover table-sortable table-nowrap m0">
         <thead>
           <tr>
-            <th>
-              <a href="#" title="Sort ascending">
-                Name
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th class="sorted-asc">
+            <th class="sortable"><a href="#">Name</a></th>
+            <th class="sortable"><a href="#">No.</a></th>
+            <th class="sortable sorted-asc">
               <a href="#" title="Sorted ascending">
-                No.
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
+                Status <span class="sort-indicator"><b class="caret"></b><b class="caret flipped"></b></span>
               </a>
             </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                Status
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                Value VAT in.
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                Value VAT ex.
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                VAT
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                Due date
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
+            <th class="sortable"><a href="#">Value VAT in.</a></th>
+            <th class="sortable"><a href="#">Value VAT ex.</a></th>
+            <th class="sortable"><a href="#">VAT</a></th>
+            <th class="sortable"><a href="#">Due date</a></th>
             <th></th>
           </tr>
         </thead>
@@ -153,72 +102,21 @@ title: Invoices
   </div>
   <div class="panel-body">
     <div class="table-responsive">
-      <table class="table table-striped table-condensed">
+
+      <table class="table table-condensed table-striped table-hover table-sortable table-nowrap m0">
         <thead>
           <tr>
-            <th>
-              <a href="#" title="Sort ascending">
-                Name
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th class="sorted-asc">
+            <th class="sortable"><a href="#">Name</a></th>
+            <th class="sortable"><a href="#">No.</a></th>
+            <th class="sortable sorted-asc">
               <a href="#" title="Sorted ascending">
-                No.
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
+                Status <span class="sort-indicator"><b class="caret"></b><b class="caret flipped"></b></span>
               </a>
             </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                Status
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                Value VAT in.
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                Value VAT ex.
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                VAT
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
-            <th>
-              <a href="#" title="Sort ascending">
-                Due date
-                <span class="sortable">
-                  <b class="caret"></b>
-                  <b class="caret flipped"></b>
-                </span>
-              </a>
-            </th>
+            <th class="sortable"><a href="#">Value VAT in.</a></th>
+            <th class="sortable"><a href="#">Value VAT ex.</a></th>
+            <th class="sortable"><a href="#">VAT</a></th>
+            <th class="sortable"><a href="#">Due date</a></th>
             <th></th>
           </tr>
         </thead>
