--- a/clients.html
+++ b/clients.html
@@ -12,45 +12,17 @@ title: Clients
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-condensed table-responsive">
+  <table class="table table-striped table-condensed table-responsive table-sortable">
     <thead>
       <tr>
-        <th>
-          <a href="#" title="Sort ascending">
-            Company
-            <span class="sortable">
-              <b class="caret"></b>
-              <b class="caret flipped"></b>
-            </span>
+        <th class="sortable"><a href="#">Company</a></th>
+        <th class="sortable"><a href="#">Address</a></th>
+        <th class="sortable sorted-asc">
+          <a href="#" title="Sorted ascending">
+            Contact name <span class="sort-indicator"><b class="caret"></b><b class="caret flipped"></b></span>
           </a>
         </th>
-        <th>
-          <a href="#" title="Sort ascending">
-            Address
-            <span class="sortable">
-              <b class="caret"></b>
-              <b class="caret flipped"></b>
-            </span>
-          </a>
-        </th>
-        <th>
-          <a href="#" title="Sort ascending">
-            Contact name
-            <span class="sortable">
-              <b class="caret"></b>
-              <b class="caret flipped"></b>
-            </span>
-          </a>
-        </th>
-        <th>
-          <a href="#" title="Sort ascending">
-            Contact e-mail
-            <span class="sortable">
-              <b class="caret"></b>
-              <b class="caret flipped"></b>
-            </span>
-          </a>
-        </th>
+        <th class="sortable"><a href="#">Contact e-mail</a></th>
         <th></th>
       </tr>
     </thead>
