--- a/app-settings.html
+++ b/app-settings.html
@@ -40,7 +40,7 @@ title: Settings
       <div class="form-group">
         <div class="col-sm-2"></div>
         <div class="col-sm-10">
-          <button type="submit" class="btn btn-default">Save</button>
+          <a data-state-push='{ popmessages: "states/pop-success.html" }' class="btn btn-default">Save</a>
         </div>
       </div>
 
